# KomBox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  WIP.txt  ci.yml  coveragerc  gitignore  pre-commit-config.yaml  pyproject.toml  pytest.ini  readme_kom_box_v_0_1.md
examples/: example_001_msd.py  example_002_recording.py  example_003_load_npz.py  example_004_rk4_msd.py  example_005_torchdiffeq.py  example_006_hybrid_solvers.py  example_007_paramgrid_msd.py  example_008_sweeps_gpu.py  example_009_dcmotor_pi.py  example_010_buck_pi.py  example_011_identification.py  example_012_identification_kc.py  example_013_optimize_kp.py  example_014_pendulum_constrained.py  example_015B.py  example_015_F3_full_demo.py
kombox/: __init__.py
kombox/blocks/: __init__.py  basic.py  control.py  electrical.py  mechanical.py  power.py
kombox/core/: __init__.py  block.py  model.py  recorders.py  simulator.py  solvers.py  solvers_trapezoidal.py  topology.py  utils.py
kombox/docs/: KomBox_Roadmap.md
kombox/utils/: externals.py  helpers.py  plotting.py  visualization.py
tests/: conftest.py  test_all_unified.py  test_block_api_algebraic.py  test_checkpoint_time.py  test_dae_api_mvp.py  test_dae_init.py  test_dae_init_z.py  test_externals_and_errors.py  test_f2_scc_residual.py  test_jfnk_basic.py  test_kkt_modes.py  test_kkt_trapezoidal.py  test_newtonkrylov_allow_unused.py  test_projection_baumgarte.py  test_projection_poststep.py  test_simulator_apis.py  test_solver_modes.py  test_torchdiffeq_vs_rk45.py  test_trapezoidal_solver_minimal.py
(+2 files in other folders)
